Tweak: update copy and html in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Greeting the world</title>
 </head>
 <body>
-    <h1>Hello world! Goodbye world!</h1>
+    <h1>Ways to Greet the World</h1>
+    <h2>Hello</h2>
+    <p>Hello world!</p>
+    <h2>Goodbye</h2>
+    <p>Goodbye world!</p>
 </body>
 </html>
