Tweak: add inline style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Greeting the world</title>
 </head>
 <body>
-    <h1>Ways to Greet the World</h1>
+    <h1 style="font-weight: bold;">Ways to Greet the World</h1>
     <h2>Say Hello</h2>
     <p>Hello, world!</p>
     <h2>Say Goodbye</h2>
