Tweak: change copy for headings

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Ways to Greet the World</h1>
-    <h2>Hello</h2>
+    <h2>Say Hello</h2>
     <p>Hello world!</p>
-    <h2>Goodbye</h2>
+    <h2>Say Goodbye</h2>
     <p>Goodbye world!</p>
 </body>
 </html>
