--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Ways to Greet the World</h1>
     <h2>Say Hello</h2>
-    <p>Hello world!</p>
+    <p>Hello, world!</p>
     <h2>Say Goodbye</h2>
-    <p>Goodbye world!</p>
+    <p>Goodbye, world!</p>
     <h2>What's up</h2>
     <p>What's up, world?</p>
 </body>
